RESOLVED FIXED58932
Terminate hung plug-in processes after 45 seconds
https://bugs.webkit.org/show_bug.cgi?id=58932
Summary Terminate hung plug-in processes after 45 seconds
Anders Carlsson
Reported 2011-04-19 15:22:14 PDT
Terminate hung plug-in processes after 45 seconds
Attachments
Patch (9.21 KB, patch)
2011-04-19 15:28 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-04-19 15:28:51 PDT
Anders Carlsson
Comment 2 2011-04-19 15:35:38 PDT
WebKit Review Bot
Comment 3 2011-04-20 03:23:25 PDT
http://trac.webkit.org/changeset/84302 might have broken GTK Linux 64-bit Debug
Note You need to log in before you can comment on or make changes to this bug.