Source/WebKit2/UIProcess/Plugins/PluginProcessManager.cpp
@@ -74,12 +74,28 @@ void PluginProcessManager::clearSiteData(const PluginInfoStore::Plugin& plugin, 
     pluginProcess->clearSiteData(webPluginSiteDataManager, sites, flags, maxAgeInSeconds, callbackID);
 }
 
-PluginProcessProxy* PluginProcessManager::getOrCreatePluginProcess(const PluginInfoStore::Plugin& plugin)
+void PluginProcessManager::pluginSyncMessageSendTimedOut(const String& pluginPath)
+{
+    PluginProcessProxy* pluginProcess = pluginProcessWithPath(pluginPath);
+    if (!pluginProcess)
+        return;
+
+    pluginProcess->terminate();
+}
+
+PluginProcessProxy* PluginProcessManager::pluginProcessWithPath(const String& pluginPath)
 {
     for (size_t i = 0; i < m_pluginProcesses.size(); ++i) {
-        if (m_pluginProcesses[i]->pluginInfo().path == plugin.path)
+        if (m_pluginProcesses[i]->pluginInfo().path == pluginPath)
             return m_pluginProcesses[i];
     }
+    return 0;
+}
+
+PluginProcessProxy* PluginProcessManager::getOrCreatePluginProcess(const PluginInfoStore::Plugin& plugin)
+{
+    if (PluginProcessProxy* pluginProcess = pluginProcessWithPath(plugin.path))
+        return pluginProcess;
 
     PluginProcessProxy* pluginProcess = PluginProcessProxy::create(this, plugin).leakPtr();
     m_pluginProcesses.append(pluginProcess);
